minor fixes and reformatting

--- a/Project4/src/Project4/wwwroot/warning.html
+++ b/Project4/src/Project4/wwwroot/warning.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title></title>
 </head>
-<body ng-controller="todoController" ng-init="printData()">
+<body ng-controller="todoController" ng-init="getTodoList()">
 <div ng-model="warningDays">
     <h1>Settings</h1>
     <h3>Change warning duration</h3>
